--- a/Pictures/chatbox/templates/index.html
+++ b/Pictures/chatbox/templates/index.html
@@ -7,7 +7,7 @@
             Somos una institución comprometida con la excelencia académica y la formación integral de nuestros estudiantes.
             Aquí, el conocimiento se encuentra con la innovación para crear un futuro brillante.
         </p>
-        <a href="/programas.html" class="button">Explora nuestros programas</a>
+        <a href="/programas" class="button">Explora nuestros programas</a>
     </section>
 
     <section class="destacados">
