--- a/Pictures/chatbox/templates/mision.html
+++ b/Pictures/chatbox/templates/mision.html
@@ -2,5 +2,8 @@
 
 {% block content %}
     <h2>Nuestra Misión</h2>
-    <p>Aquí va el texto de la misión de la universidad.</p>
+    <p>
+        La Institución Universitaria de Colombia, es una institución universitaria, dedicada a la transmisión, investigación e integración de la academia con la sociedad. Inspirada en el crecimiento y desarrollo de la persona como ser humano crítico y gestora del crecimiento familiar y comunitario. Esta misión se realiza con una orientación preferente hacia la solución de los problemas y necesidades, contribuyendo al desarrollo integral y a la formación de una ciudadanía preparada, crítica, con conciencia social y responsabilidad ética.
+La Institución ejerce su misión con un alto grado de excelencia, sentido de compromiso y de modo reflexivo y crítico, con el compromiso frecuente del servicio al ser humano, siendo principio y fin de todas las actividades Institucionales.
+</p>
 {% endblock %}
