--- a/Pictures/chatbox/templates/vision.html
+++ b/Pictures/chatbox/templates/vision.html
@@ -3,7 +3,6 @@
 {% block content %}
     <h2>Nuestra Visión</h2>
     <p>
-        En la Universidad, aspiramos a ser un referente global en la formación de líderes y profesionales innovadores,
-        impulsando el progreso social y económico a través de la excelencia académica y la investigación de vanguardia.
+        La Institución Universitaria de Colombia, será una institución de reconocida solvencia académica, indiscutible calidad pedagógica y demostrada capacidad educativa, acreditada, soporte del desarrollo social, fundamentada en la idoneidad de todos sus procesos académicos y administrativos.
     </p>
 {% endblock %}
